syntax = "proto3";
package proto;
option go_package = "cmd/proto";


message SetReq {
  bytes key               = 1;
  bytes value             = 2;
}

message SetRsp {
  string errorMsg         = 1;
}

message SetNxReq {
  bytes key               = 1;
  bytes value             = 2;
}

message SetNxRsp {
  bool ok                 = 1;
  string errorMsg         = 2;
}

message SetExReq {
  bytes key               = 1;
  bytes value             = 2;
  int64 duration          = 3;
}

message SetExRsp {
  string errorMsg         = 1;
}

message GetReq {
  bytes key               = 1;
}

message GetRsp {
  bytes dest              = 1;
  string errorMsg         = 2;
}

message GetSetReq {
  bytes key               = 1;
  bytes value             = 2;
}

message GetSetRsp {
  bytes dest              = 1;
  string errorMsg         = 2;
}

message MSetReq {
  repeated bytes keys     = 1;
  repeated bytes values   = 2; 
}

message MSetRsp {
  string errorMsg         = 1;
}

message MGetReq {
  repeated bytes keys     = 1;
}

message MGetRsp {
  repeated bytes values   = 1;
  string errorMsg         = 2;
}

message AppendReq {
  bytes key               = 1;
  bytes value             = 2;
}

message AppendRsp {
  string errorMsg         = 1;
}

message RemoveReq {
  bytes key               = 1;
}

message RemoveRsp {
  string errorMsg         = 1;
}

message PrefixScanReq {
  bytes prefix            = 1;
  int64 limit             = 2;
  int64 offset            = 3;
}

message PrefixScanRsp {
  repeated bytes values   = 1;
  string errorMsg         = 2;
}

message RangeScanReq {
  bytes start             = 1;
  bytes end               = 2;
}

message RangeScanRsp {
  repeated bytes values   = 1;
  string errorMsg         = 2;
}

message ExpireReq {
  bytes key               = 1;
  int64 duration          = 2;
}

message ExpireRsp {
  string errorMsg         = 1;
}

message PersistReq {
  bytes key               = 1;
}

message PersistRsp {
  string errorMsg         = 1;
}

message TTLReq {
  bytes key               = 1;
}

message TTLRsp {
  int64 ttl               = 1;
}

message StrExistsReq {
  bytes key               = 1;
}

message StrExistsRsp {
  bool ok                 = 1;
  string errorMsg         = 2;
}